--- a/styels/style.scss
+++ b/styels/style.scss
@@ -3,3 +3,9 @@ $primary-color: blue;
 h1{
     color: $primary-color;
 }
+p{
+    background-color: $primary-color;
+}
+ul{
+    border: 2px solid $primary-color;
+}
