--- a/styels/style.scss
+++ b/styels/style.scss
@@ -5,6 +5,9 @@ h1{
 }
 p{
     background-color: $primary-color;
+    color: white;
+    margin: 5px;
+    padding: 15px;
 }
 ul{
     border: 2px solid $primary-color;
